# codepilot

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  tasks.py
codepilot/: __main__.py
codepilot/agents/: subagents.py
codepilot/config/: __init__.py  settings.py
codepilot/github_io/: __init__.py  client.py  filters.py  models.py  poller.py  prompts.py  workspace.py
codepilot/guardrails/: __init__.py  base.py  files.py  hitl.py  prompt.py  shell.py
codepilot/memory/: __init__.py  embeddings.py  episodic.py  semantic.py  state.py
codepilot/observability/: __init__.py  audit.py  context.py  events.py  langsmith_tracing.py  logger.py  redaction.py  trace_cli.py  tracing.py
codepilot/orchestrator/: __init__.py  classifier.py  deep_agent.py  factory.py  orchestrator.py
codepilot/sandbox/: __init__.py  diff.py  local.py
codepilot/skills/: __init__.py  base.py  loader.py  registry.py  render.py
codepilot/tui/: __init__.py  app.py  hitl.py  models.py  widgets.py
docs/: learning-guide.md
docs/steering/: README.md  phase_00_scaffold.md  phase_01_github_io.md  phase_02_memory.md  phase_03_skills.md  phase_04_guardrails.md  phase_05_logging.md  phase_05_sandbox.md  phase_06_repo_explorer.md  phase_07_coder.md  phase_08_test_agent.md  phase_09_pr_agent.md  phase_10_orchestrator.md  phase_11_tui.md  phase_12_e2e.md  phase_13_hardening.md
tests/: conftest.py
tests/agents/: test_classifier.py  test_orchestrator.py  test_subagent_specs.py  test_tool_github.py  test_tool_memory.py  test_tool_repo.py  test_tool_test.py
tests/e2e/: test_pipeline.py  test_tui_pipeline.py
tests/tui/: test_hitl_coordinator.py  test_keybindings.py  test_panels.py
tests/unit/: _gh_fakes.py  test_audit.py  test_cli.py  test_coder_agent.py  test_coder_edits.py  test_context.py  test_diff_gen.py  test_embeddings.py  test_episodic.py  test_file_guard.py  test_file_scorer.py  test_filters.py  (+40 more)
(+25 files in other folders)
