[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codepilot"
version = "1.0.0"
description = "Multi-agent autonomous coding platform that triages GitHub issues and opens PRs."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "CodePilot" }]
license = { text = "MIT" }

dependencies = [
    "deepagents>=0.0.5",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "qdrant-client>=1.11.0",
    "textual>=0.80.0",
    "PyGithub>=2.3.0",
    "nemoguardrails>=0.10.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "rich>=13.7.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "langsmith>=0.1.100",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "jsonschema>=4.23.0",
]

[project.scripts]
codepilot = "codepilot.__main__:main"

[tool.setuptools.packages.find]
include = ["codepilot*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers -W ignore::pytest.PytestCollectionWarning"
markers = [
    "integration: requires external services",
    "e2e: end-to-end against real GitHub",
]

[tool.coverage.run]
source = ["codepilot"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
